DEV Added Interfaces And Repository

--- a/TritonExpress/TritonExpress.API/appsettings.json
+++ b/TritonExpress/TritonExpress.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Server=LNGDURL0000329\\SQLSERVER2012;Database=TritonExpress;Trusted_connection=True;"
+  }
 }
