--- a/TritonExpress/TritonExpress.Services/TritonExpress.Services.csproj
+++ b/TritonExpress/TritonExpress.Services/TritonExpress.Services.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TritonExpress.Interfaces\TritonExpress.Interfaces.csproj" />
+    <ProjectReference Include="..\TritonExpress.Models\TritonExpress.Models.csproj" />
+  </ItemGroup>
 
 </Project>
