--- a/TritonExpress/TritonExpress/appsettings.json
+++ b/TritonExpress/TritonExpress/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TritonExpress-4B668850-B765-4698-ADA6-05677C2FB83E;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DevConnection": "Server=LNGDURL0000329\\SQLSERVER2012;Database=TritonExpress1;Trusted_connection=True;"
   },
   "Logging": {
     "LogLevel": {
