--- a/TritonExpress/TritonExpress.API/TritonExpress.API.csproj
+++ b/TritonExpress/TritonExpress.API/TritonExpress.API.csproj
@@ -1,8 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TritonExpress.Interfaces\TritonExpress.Interfaces.csproj" />
+    <ProjectReference Include="..\TritonExpress.Repositories\TritonExpress.Repositories.csproj" />
+    <ProjectReference Include="..\TritonExpress.Services\TritonExpress.Services.csproj" />
+  </ItemGroup>
 
 
 </Project>
