--- a/TritonExpress/TritonExpress/appsettings.json
+++ b/TritonExpress/TritonExpress/appsettings.json
@@ -1,5 +1,7 @@
 {
+  "TritonExpressEndopint": "http://localhost:5000/api/",
   "ConnectionStrings": {
+    "DefaultConnection": "Server=LNGDURL0000329\\SQLSERVER2012;Database=TritonExpress;Trusted_connection=True;",
     "DevConnection": "Server=LNGDURL0000329\\SQLSERVER2012;Database=TritonExpress1;Trusted_connection=True;"
   },
   "Logging": {
